fixed layout on mobile for crypto

--- a/src/sass/_base.sass
+++ b/src/sass/_base.sass
@@ -46,3 +46,6 @@ header.header
 
 p
   margin: 0
+
+*, *:before, *:after
+  box-sizing: border-box
