--- a/src/sass/_coinBox.sass
+++ b/src/sass/_coinBox.sass
@@ -26,6 +26,7 @@
       border: none
       padding: 0 5px
       outline: none
+      width: 100%
       border-bottom: 1px solid #999
     .input-name
       margin: 2px
